swager in person
