# internal/server/handlers/response.go
@@ -1,0 +1,6 @@
+package handlers
+
+type ErrorResponce struct {
+	Message string `json:"message"`
+	Error   error  `json:"error"`
+}
